# gravity-hemera-base-interfaces-plugin

./: CMakeLists.txt  README.md  hemerabaseinterfacesconfig.h.in
share/: com.ispirata.Hemera.ApplianceManifest.json
src/: CMakeLists.txt  HemeraBaseInterfaces.cpp  HemeraBaseInterfaces.h  HemeraBaseInterfacesPlugin.cpp  HemeraBaseInterfacesPlugin.h
